@@ -14,5 +14,6 @@ macro (ADD_DLL _name _dir)
         list(APPEND WIN32_INSTALL_DLL "${${FLAGNAME}}")
         CONFIGURE_FILE("${${FLAGNAME}}" "${Gammu_BINARY_DIR}/gammu/${_name}" COPYONLY)
         CONFIGURE_FILE("${${FLAGNAME}}" "${Gammu_BINARY_DIR}/tests/${_name}" COPYONLY)
+        CONFIGURE_FILE("${${FLAGNAME}}" "${Gammu_BINARY_DIR}/smsd/${_name}" COPYONLY)
     endif (WIN32)
 endmacro (ADD_DLL _name _dir)
